--- a/Calculator/View/Base.lproj/Main.storyboard
+++ b/Calculator/View/Base.lproj/Main.storyboard
@@ -274,6 +274,10 @@
                         <outletCollection property="roundButton" destination="Ctw-mn-Wnb" collectionClass="NSMutableArray" id="9oY-6M-9gt"/>
                         <outletCollection property="roundButton" destination="SoY-u1-55l" collectionClass="NSMutableArray" id="mby-bh-f4d"/>
                         <outletCollection property="roundButton" destination="VVc-aB-dFm" collectionClass="NSMutableArray" id="tAs-Nj-2TC"/>
+                        <outletCollection property="colorGroup1" destination="VVc-aB-dFm" collectionClass="NSMutableArray" id="oBp-oe-d2b"/>
+                        <outletCollection property="colorGroup1" destination="SoY-u1-55l" collectionClass="NSMutableArray" id="HOa-5Y-gMT"/>
+                        <outletCollection property="colorGroup1" destination="Ctw-mn-Wnb" collectionClass="NSMutableArray" id="Iwp-0X-YVN"/>
+                        <outletCollection property="colorGroup1" destination="39q-ab-Iy9" collectionClass="NSMutableArray" id="pOj-M1-jU9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
